Fix z-index for overlay

--- a/docroot/themes/custom/shops/style/scss/_base.scss
+++ b/docroot/themes/custom/shops/style/scss/_base.scss
@@ -31,7 +31,7 @@ body {
   background: rgba($black,.54);
 
   @include media-breakpoint-down(lg) {
-    z-index: 105;
+    z-index: 550;
   }
 }
 
